--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema</title>
+    
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" /> <!--Estenção para arquivo css-->
 
-    <link rel="stylesheet" type="text/css" href="styles.css" media="screen" /> <!--Estenção para arquivo css-->
     <script src="script.js"></script> <!--Estenção para arquivo JavaScript-->
     
 </head>
