Alteração no corrinho

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </table>
                 <div class="total">
                     <span>Total:</span>
-                    <span>Total</span>
+                    <span></span>
                 </div>
 
             </section>
